# bambu-lan-viewer

./: .gitignore  .tailscale.env.example  AGENTS.md  README.md  docker-compose.generic.yml  docker-compose.tailscale.yml  docker-compose.yml
.tailscale/: serve.json
Bambu LAN Viewer/: AddPrinterView.swift  AppEnvironment.swift  Bambu_LAN_ViewerApp.swift  CocoaMqttTransport.swift  ContentView.swift  DashboardView.swift  H264DecoderVT.swift  H264RTPDepacketizer.swift  Models.swift  NativeVideoTransport.swift  PrinterReport.swift  PrinterService.swift  PrinterStore.swift  Protocols.swift  RTPPacket.swift  RTPTimeMapper.swift  RTSPClient.swift  RTSPPlayerView.swift  RTSPStreamParser.swift  SDPParser.swift  SerialNumberDetector.swift  Storage.swift  TrustHasher.swift  VideoRenderer.swift
Bambu LAN Viewer.xcodeproj/: project.pbxproj
Docs/: CLI.md  DeploymentCloudflare.md  DeploymentGeneric.md  DeploymentTailscale.md  DesignDoc.md  ExampleMQTTReport.json  MQTTProtocol.md  MSEStreamer.md  NativeDecoding.md  Phase1Checklist.md  SerialNumberDetection.md  WebBasedChecklist.md  WebBasedViewer.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/server/: Cargo.toml
backend/server/src/: auth.rs  commands.rs  config.rs  db.rs  http.rs  main.rs  mqtt.rs  printers.rs  state.rs  tls.rs
backend/server/src/rtsp/: auth.rs  client.rs  cmaf.rs  depacketizer.rs  hls.rs  mod.rs  parser.rs  pipeline.rs  rtp.rs  sdp.rs  stream.rs  time.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AmsFilamentCard.jsx  Header.jsx  Icons.jsx  PrinterManagerDrawer.jsx  StatusControls.jsx  VideoCard.jsx  (+1 more)
(+8 files in other folders)
